# obsidian-workflows

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json
.claude-plugin/: marketplace.json  plugin.json
commands/: compound.md  ow-compound.md  ow-plan.md  ow-policy.md  ow-review.md  ow-work.md  write-active.md  write-autorun.md  write-compound-capture.md  write-draft.md  write-init.md  write-propose.md  write-refine.md  write-review-policy.md  write-route.md  write-scan.md
config/: writing-config.example.md
docs/: CACHING.md  PARALLEL.md  QUICK_START.md  SCENARIOS.md  SMART_MODE.md  command-specification.md  external-tools-integration.md  frontmatter-reference.md  hook-patterns.md  naming-conventions.md  policy-specification.md  repository-structure.md  skill-specification.md  validation-guide.md
scripts/: check-duplicates.js  lint-frontmatter.js  test-plan-passive-default.js  validate-behavior-contracts.js  validate-commands.js
skills/: skills.md
src/: scan-recent-files.sh
src/external-tools/: README.md  detector.js  keyword-detector.js  keyword_detector.py  pyproject.toml  registry.js
template/: create-command.sh
todos/: 001-complete-p2-markdownlint-config-source-of-truth.md
tools/: check-frontmatter.sh  check-skill-frontmatter.sh  check-skill-sync.sh  generate-index.sh  lint-frontmatter.sh  update-skill-hash.sh  validate-ci.sh  validate-command.sh  validate-fast.sh  validate-generated.sh  validate-hook-paths.sh  (+2 more)
(+79 files in other folders)
